--- a/7_7_23_nn_lab.ipynb
+++ b/7_7_23_nn_lab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5ugcDbyvbHyWWy5RJWQ1M",
+      "authorship_tag": "ABX9TyO7pGW5tET6SYk72e8Xkom1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -132,9 +132,38 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "x=np.array([3,4,5,6])\n",
+        "y=np.array([6,8,10,12])\n",
+        "slope,intercept=np.polyfit(x,y,1)\n",
+        "print(\"slope\",slope)\n",
+        "print(\"intercept\",intercept)"
+      ],
+      "metadata": {
+        "id": "sB8AwSv7PwkA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9bcc8fd1-4172-45c9-96d4-efebe70052b5"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "slope 2.0\n",
+            "intercept 3.1491611052924456e-15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "sB8AwSv7PwkA"
+        "id": "GvuVeMHoUrBs"
       },
       "execution_count": null,
       "outputs": []
