--- a/7_7_23_nn_lab.ipynb
+++ b/7_7_23_nn_lab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7pGW5tET6SYk72e8Xkom1",
+      "authorship_tag": "ABX9TyMDL7hNM9jkxOinuoRofOD+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,6 +129,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **slope , intercept**"
+      ],
+      "metadata": {
+        "id": "OqrZQ0oEU9Fu"
+      }
     },
     {
       "cell_type": "code",
